--- a/world-data-analysis.ipynb
+++ b/world-data-analysis.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "world-data-analysis.ipynb",
       "version": "0.3.2",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Rahulmisal27/DataScience/blob/master/world-data-analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "metadata": {
         "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
@@ -44,7 +55,14 @@
         "import math\n",
         "import decimal\n",
         "\n",
-        "data=pd.read_csv('DataScience/data/countries of the world.csv')\n",
+        "# Upload data from GitHub to notebook's local drive\n",
+        "url = \"https://raw.githubusercontent.com/Rahulmisal27/DataScience/master/data/countries%20of%20the%20world.csv\"\n",
+        "response = urllib.request.urlopen(url)\n",
+        "html = response.read()\n",
+        "\n",
+        "with open(args.data_file, 'wb') as fp:\n",
+        "    fp.write(html)\n",
+        "data=pd.read_csv(args.data_file, header=0)\n",
         "Worlddata=pd.DataFrame(data)\n",
         "Worlddata.head(10)\n",
         "\n",
